--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,10 @@ body{
 header{
     background-color:lightcoral;
 }
+
+h1{
+    font-family:'Oswald', sans-serif;
+}
 /* Main */
 main{
     background-color:lightblue;
