--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,22 @@ header{
     z-index:99;
     width:100%;
     box-shadow: 0 2px 2px #3a3a3a;
+    display:flex;
+    justify-content: space-between;
+    align-items: baseline;
+}
+
+/*Nav toggle*/
+#nav-toggle:checked ~ nav{
+    display:block;
+}
+
+#nav-toggle{
+    display: none;
+}
+
+.nav-toggle-label{
+    font-size: 2rem;
 }
 
 header a{
@@ -64,6 +80,7 @@ nav{
     padding: 0 1rem;
     box-shadow: 0 2px 2px #3a3a3a;
     display: none;
+    top:100%;
 }
 
 /* Main */
@@ -71,6 +88,7 @@ main{
     background-color:lightblue;
     /*Make main element take up any surplus space to push footer down*/
     flex: 1 0 auto;
+    margin-top: 47px;
 }
 /* Footer */
 footer{
