--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,3 +126,11 @@ footer{
         margin-top: 79px;
      }
 }
+
+/*Large devices (desktops and laptops 992px and up)*/
+@media screen and (min-width: 992px) {
+    #menu a:hover{
+            border-bottom: 1px solid #3a3a3a;
+        }
+    }
+}
