--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,7 @@ nav {
 
 /* Main content */
 main {
-    background-color: lightblue;
+    
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
     margin-top: 47px;
@@ -98,6 +98,14 @@ main {
     display: flex;
     justify-content: space-evenly;
     list-style-type: none;
+}
+
+/*Hero section*/
+#hero{
+    height: 600px;
+    width: 100%;
+    background: url("../images/hero-image.webp") no-repeat center center/cover;
+
 }
 
 #social-networks i {
