--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,6 +130,32 @@ main {
     color: #ffffff;
 }
 
+#reasons{
+    width: 90%;
+    margin: 20px auto;
+}
+
+#reasons h2{
+    font-size:280%;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+#benefits-physical > div, #benefits-mental > div{
+    line-height: 20px;
+    margin-bottom: 20px;
+
+}
+
+#benefits p{
+    padding: 0 20px;
+}
+
+hr{
+    border-top: 1px solid #3a3a3a; 
+    margin: 5px 0;
+}
+
 #social-networks i {
     font-size: 160%;
     padding: 5%;
