--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,29 +130,30 @@ main {
     color: #ffffff;
 }
 
-#reasons{
+/* Reasons section */
+#reasons {
     width: 90%;
     margin: 20px auto;
 }
 
-#reasons h2{
-    font-size:280%;
+#reasons h2 {
     margin-bottom: 20px;
     text-align: center;
+    font-size: 280%;
 }
 
-#benefits-physical > div, #benefits-mental > div{
+#benefits-physical>div,
+#benefits-mental>div {
     line-height: 20px;
     margin-bottom: 20px;
-
 }
 
-#benefits p{
+#benefits p {
     padding: 0 20px;
 }
 
-hr{
-    border-top: 1px solid #3a3a3a; 
+#benefits hr {
+    border-top: 1px solid #3a3a3a;
     margin: 5px 0;
 }
 
