--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,6 +174,14 @@ main {
     justify-content: center;
 }
 
+#times {
+    background: url('../images/dublin-city.webp') no-repeat center / cover;
+    /*Handles resposively without the need for a media query*/
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
 #social-networks i {
     font-size: 160%;
     padding: 5%;
