--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,6 +182,14 @@ main {
 
 }
 
+#times div {
+    color:#fafafa;
+    background-color: rgba(0, 0, 0, .6);
+    padding: 15px;
+    text-align: center;
+
+}
+
 #social-networks i {
     font-size: 160%;
     padding: 5%;
