Add stying to Gallery for mobile phones

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,6 +96,15 @@ main {
     margin-top: 47px;
 }
 
+/*Gallery page*/
+#photos img {
+    width: 100%;
+    line-height: 1em;
+}
+
+#photos {
+    line-height: 0;
+}
 
 /*Footer*/
 #social-networks{
