--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,15 +18,13 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
     letter-spacing: 2px;
     color: #252525;
-}
-
-.hidden-heading {
-    display: none;
 }
 
 /* Header */
@@ -47,15 +45,13 @@ header a {
     color: inherit;
 }
 
-
-
 #menu {
     font-size: 110%;
     letter-spacing: 4px;
     list-style-type: none;
 }
 
-#menu > li {
+#menu>li {
     margin-bottom: 1em;
 }
 
@@ -90,54 +86,33 @@ nav {
 
 /* Main content */
 main {
-    
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
     margin-top: 47px;
 }
 
-/*Gallery page*/
-#photos img {
-    width: 100%;
-    line-height: 1em;
-}
-
-#photos {
-    line-height: 0;
-}
-
-/*Footer*/
-#social-networks{
-    text-align: center;
-    padding: 20px 0;
-    display: flex;
-    justify-content: space-evenly;
-    list-style-type: none;
-}
-
-/*Hero section*/
-#hero{
+/* Hero section */
+#hero {
     height: 600px;
     width: 100%;
     background: url("../images/hero-image.webp") no-repeat center center/cover;
-    position:relative;
-
+    position: relative;
 }
 
-#cover-text{
-    /*Final rgba value sets the opacity so it is semi-transparent*/
+#cover-text {
+    /* Final rgba value sets the opacity so it is semi-transparent */
     background-color: rgba(241, 109, 107, .7);
-    font-size:130%;
-    position:absolute;
+    font-size: 130%;
+    position: absolute;
     bottom: 30px;
     width: 80%;
     min-height: 200px;
     padding-top: 40px;
     padding-left: 10px;
-
 }
 
-#cover-text > h2, #cover-text > h3 {
+#cover-text>h2,
+#cover-text>h3 {
     color: #ffffff;
 }
 
@@ -170,10 +145,10 @@ main {
 
 #circle-cover-bg {
     background: url('../images/reasons-image.webp') no-repeat top center / cover;
-    width: 90vw;
     height: 90vw;
+    width: 90vw;
     margin-bottom: 20px;
-    /*Makes the square image into a circle*/
+    /* Makes the square image into a circle */
     border-radius: 50%;
     max-width: 300px;
     max-height: 300px;
@@ -211,14 +186,42 @@ main {
     color: #fafafa;
 }
 
+/* Gallery page */
+#photos img {
+    width: 100%;
+    line-height: 1em;
+}
+
+#photos {
+    line-height: 0;
+}
+
+/* Footer */
+#social-networks {
+    text-align: center;
+    padding: 20px 0;
+    display: flex;
+    justify-content: space-evenly;
+    list-style-type: none;
+}
+
 #social-networks i {
     font-size: 160%;
     padding: 5%;
     color: #3a3a3a;
 }
 
+/* Media query: large or landscape phones (576px and up) */
+@media screen and (min-width: 576px) {
+    #photos {
+        column-count: 2;
+        column-gap: 0;
+    }
+}
+
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
+
     /* Header */
     nav {
         display: block;
@@ -232,7 +235,7 @@ main {
         display: flex;
     }
 
-    #menu > li {
+    #menu>li {
         padding-left: 1rem;
     }
 
@@ -251,40 +254,48 @@ main {
         /* Push main content down to accommodate larger header */
         margin-top: 79px;
     }
-    
-    /*Hero*/
-    #cover-text{
-    width: 300px;
-    right: 50px;
+
+    /* Hero */
+    #cover-text {
+        width: 300px;
+        right: 50px;
     }
 
-    /*Reasons section*/
-    #benefits-physical, 
-    #benefits-mental{
+    /* Reasons section */
+    #benefits-physical,
+    #benefits-mental {
         display: flex;
         flex-direction: column;
         width: 100%;
     }
 
-     #benefits-physical > div,
-     #benefits-mental > div {
-     width: 75%;
+    #benefits-physical>div,
+    #benefits-mental>div {
+        width: 75%;
     }
 
-     #benefits-mental > div {
+    #benefits-mental>div {
         text-align: end;
         align-self: flex-end;
-     }
+    }
 
+    /* Gallery */
+    #photos {
+        column-count: 3;
+    }
 }
 
 /* Large devices (laptops and desktops, 992px and up) */
 @media screen and (min-width: 992px) {
-    #menu a:hover{
+    #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
     }
-}
 
+    /* Gallery */
+    #photos {
+        column-count: 4;
+    }
+}
 
 @media screen and (min-width: 1200px) {
 
